[wheel]
python-tag = py3

[metadata]
name = muffin-example
version = 0.2
url = https://github.com/klen/muffin-example
description = Example chat application for Muffin Framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = muffin, example, asyncio, trio, asgi
project_urls = 
    Documentation = https://github.com/klen/muffin-example
    Source code = https://github.com/klen/muffin-example
    Issue tracker = https://github.com/klen/muffin-example/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = example
python_requires = >= 3.7
include_package_data = True

[options.entry_points]
console_scripts = 
    muffin = muffin.manage:cli

[pylama]
linters = pep8,pyflakes
ignore = D203,D211,D213

[pylama:example/config/*]
ignore = W0401

[pylama:tests/*.py]
ignore = D

[tool:pytest]
addopts = -xsv
muffin_app = example
muffin_config = example.config.tests

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps = -e .[tests]
commands = 
    pytest tests
